--- a/soccer.html
+++ b/soccer.html
@@ -98,36 +98,6 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Köln vs Wolfsburg</a></td>
-<td>January 30, 2026 11:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="January 31, 2026 11:30:00 AM" data-start="January 30, 2026 11:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Lazio vs Genoa</a></td>
-<td>January 30, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="January 31, 2026 11:45:00 AM" data-start="January 30, 2026 11:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Lens vs Le Havre</a></td>
-<td>January 30, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="January 31, 2026 11:45:00 AM" data-start="January 30, 2026 11:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Espanyol vs Deportivo Alavés</a></td>
-<td>January 30, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="January 31, 2026 12:00:00 PM" data-start="January 30, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Bristol City vs Derby City</a></td>
-<td>January 30, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="January 31, 2026 12:00:00 PM" data-start="January 30, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Puebla vs Toluca</a></td>
-<td>January 30, 2026 17:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="January 31, 2026 05:00:00 PM" data-start="January 30, 2026 05:00:00 PM" span=""></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.live/soccer-streams-7">Pumas UNAM vs Santos Laguna</a></td>
 <td>January 30, 2026 19:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="January 31, 2026 07:00:00 PM" data-start="January 30, 2026 07:00:00 PM" span=""></span></td>
@@ -137,8 +107,142 @@
 <td>January 30, 2026 19:06 PM</td>
 <td><span <="" class="countdown-timer" data-end="January 31, 2026 07:06:00 PM" data-start="January 30, 2026 07:06:00 PM" span=""></span></td>
 </tr>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Sheffield Wednesday vs Wrexham</a></td>
+<td>January 31, 2026 04:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="January 31, 2026 11:30:00 AM" data-start="January 31, 2026 11:30:00 AM" span=""></span></td>
+</tbody></tr>
 <tr>
-</tr></tbody></tr></tbody></table></div>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Stoke City vs Southampton</a></td>
+<td>January 31, 2026 04:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 04:30:00 AM" data-start="January 31, 2026 04:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Leicester City vs Charlton Athletic</a></td>
+<td>January 31, 2026 04:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 04:30:00 AM" data-start="January 31, 2026 04:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Real Oviedo vs Girona</a></td>
+<td>January 31, 2026 05:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 05:00:00 AM" data-start="January 31, 2026 05:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Eintracht Frankfurt vs Bayer Leverkusen</a></td>
+<td>January 31, 2026 06:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 06:30:00 AM" data-start="January 31, 2026 06:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Brighton vs Everton</a></td>
+<td>January 31, 2026 07:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 07:00:00 AM" data-start="January 31, 2026 07:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Leeds United vs Arsenal</a></td>
+<td>January 31, 2026 07:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 07:00:00 AM" data-start="January 31, 2026 07:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Wolves vs Bournemouth</a></td>
+<td>January 31, 2026 07:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 07:00:00 AM" data-start="January 31, 2026 07:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Ipswich Town vs Preston North End</a></td>
+<td>January 31, 2026 07:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 07:00:00 AM" data-start="January 31, 2026 07:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Queens Park Rangers vs Coventry City</a></td>
+<td>January 31, 2026 07:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 07:00:00 AM" data-start="January 31, 2026 07:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Osasuna vs Villarreal</a></td>
+<td>January 31, 2026 07:15 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 07:15:00 AM" data-start="January 31, 2026 07:15:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Paris vs Marseille</a></td>
+<td>January 31, 2026 08:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 08:00:00 AM" data-start="January 31, 2026 08:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Napoli vs Fiorentina</a></td>
+<td>January 31, 2026 09:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 09:00:00 AM" data-start="January 31, 2026 09:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Chelsea vs West Ham</a></td>
+<td>January 31, 2026 09:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 09:30:00 AM" data-start="January 31, 2026 09:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Hamburger SV vs Bayern Munchen</a></td>
+<td>January 31, 2026 09:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 09:30:00 AM" data-start="January 31, 2026 09:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Levante vs Atlético Madrid</a></td>
+<td>January 31, 2026 09:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 09:30:00 AM" data-start="January 31, 2026 09:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Lorient vs Nantes</a></td>
+<td>January 31, 2026 10:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 10:00:00 AM" data-start="January 31, 2026 10:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Cagliari vs Verona</a></td>
+<td>January 31, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 11:45:00 AM" data-start="January 31, 2026 11:45:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Elche vs Barcelona</a></td>
+<td>January 31, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 12:00:00 PM" data-start="January 31, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Liverpool vs Newcastle</a></td>
+<td>January 31, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 12:00:00 PM" data-start="January 31, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Dundee United vs Hearts</a></td>
+<td>January 31, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 12:00:00 PM" data-start="January 31, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Monaco vs Rennes</a></td>
+<td>January 31, 2026 12:05 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 12:05:00 PM" data-start="January 31, 2026 12:05:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-13">América vs Necaxa</a></td>
+<td>January 31, 2026 2:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 02:00:00 PM" data-start="January 31, 2026 02:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Atlas vs Mazatlán</a></td>
+<td>January 31, 2026 3:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 03:00:00 PM" data-start="January 31, 2026 03:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-15">Atlético San Luis vs Chivas</a></td>
+<td>January 31, 2026 3:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 03:00:00 PM" data-start="January 31, 2026 03:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-16">Monterrey vs Tijuana</a></td>
+<td>January 31, 2026 5:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 05:00:00 PM" data-start="January 31, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-17">León vs Tigres UANL</a></td>
+<td>January 31, 2026 5:10 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 01, 2026 05:10:00 PM" data-start="January 31, 2026 05:10:00 PM" span=""></span></td>
+</tr>
+<tr>
+</tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
