--- a/nba.html
+++ b/nba.html
@@ -268,6 +268,110 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 31, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         San Antonio Spurs vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        January 31, 2026 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 01, 2026 12:00 PM:00" data-start="January 31, 2026 12:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Atlanta Hawks vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        January 31, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 01, 2026 4:00 PM:00" data-start="January 31, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         New Orleans Pelicans vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        January 31, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 01, 2026 4:30 PM:00" data-start="January 31, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Chicago Bulls vs Miami Heat
+        </a>
+       </td>
+       <td>
+        January 31, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 01, 2026 5:00 PM:00" data-start="January 31, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Minnesota Timberwolves vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        January 31, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 01, 2026 5:00 PM:00" data-start="January 31, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Dallas Mavericks vs Houston Rockets
+        </a>
+       </td>
+       <td>
+        January 31, 2026 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 01, 2026 5:30 PM:00" data-start="January 31, 2026 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
