--- a/nfl.html
+++ b/nfl.html
@@ -4,9 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>
-   Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV
-  </title>
+<title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
 <meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
 <meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
@@ -15,7 +13,7 @@
 <link href="css/main.css" rel="stylesheet" type="text/css"/>
 <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
 <style>
-   <script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -63,132 +61,61 @@
         h2 {
             color: pink;
         }
-  </style>
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-black">
 <div class="container-fluid">
-<a class="navbar-brand" href="https://roxiestreams.live/">
-     RoxieStreams
-    </a>
+<a class="navbar-brand" href="https://roxiestreams.live/">RoxieStreams</a>
 <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-<span class="navbar-toggler-icon">
-</span>
+<span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-<li class="nav-item">
-<a class="nav-link" href="https://roxiestreams.live/soccer">
-        Soccer
-       </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://roxiestreams.live/mlb">
-        MLB
-       </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://roxiestreams.live/nba">
-        NBA
-       </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://roxiestreams.live/nfl">
-        NFL
-       </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://roxiestreams.live/nhl">
-        NHL
-       </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://roxiestreams.live/fighting">
-        Fighting
-       </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://roxiestreams.live/motorsports">
-        Motorsports
-       </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://discord.gg/JhkVmejRmn">
-        Stream Request (Discord)
-       </a>
-</li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
+
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
+<li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
 </ul>
 </div>
 </div>
 </nav>
 <div class="container container-fluid pt-2 text-white">
 <div class="mt-5">
-<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming NFL Events
-    </h2>
+<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">Upcoming Fighting Events</h2>
 <table id="eventsTable">
 <thead>
 <tr>
-<th>
-        Event
-       </th>
-<th>
-        Start Time
-       </th>
-<th>
-        Countdown
-       </th>
+<th>Event</th>
+<th>Start Time</th>
+<th>Countdown</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>
-<a href="https://roxiestreams.live/nfl-streams-1">
-         Seattle Seahawks vs New England Patriots (Super Bowl LX)
-        </a>
-</td>
-<td>
-        February 8, 2026 15:00 PM
-       </td>
-<td>
-<span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 8, 2026 15:00:00 PM">
-</span>
-</td>
+<td><a href="https://roxiestreams.live/nfl-streams-1">Seattle Seahawks vs New England Patriots</a></td>
+<td>February 8, 2026 15:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 8, 2026 15:00:00"></span></td>
 </tr>
 <tr>
-<tr>
-<td>
-<a href="https://roxiestreams.live/nfl-streams-2">
-         Los Angeles Rams vs Seattle Seahawks
-        </a>
-</td>
-<td>
-        January 25, 2026 3:30 PM
-       </td>
-<td>
-<span class="countdown-timer" data-end="January 26, 2026 03:30:00 PM" data-start="January 25, 2026 03:30:00 PM">
-</span>
-</td>
-</tr>
-<tr>
-</tr></tr></tbody>
+</tbody>
 </table>
+</div>
+</div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-<li class="nav-item">
-<a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-        Stream Request (Discord)
-       </a>
-</li>
+<li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
 </ul>
-<p class="mb-0 text-body-secondary text-center text-lg-start">
-      Roxiestreams © 2024
-     </p>
+<p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
 </footer>
-<script src="js/bootstrap.bundle.min.js">
-</script>
+<script src="js/bootstrap.bundle.min.js"></script>
 <script>
-     function startCountdown() {
+        function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -218,7 +145,5 @@
 
         window.onload = startCountdown;
     </script>
-</div>
-</div>
 </body>
 </html>
