--- a/fighting.html
+++ b/fighting.html
@@ -98,14 +98,19 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/aew">AEW</a></td>
-<td>January 28, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 28, 2026 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE Royal Rumble</a></td>
+<td>January 31, 2026 09:00 AM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="January 31, 2026 09:00:00"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
-<td>January 30, 2026 09:00/17:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 30, 2026 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/ufc">UFC 325 Volkanovski vs Lopes 2</a></td>
+<td>January 31, 2026 14:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="January 31, 2026 14:00:00"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/ppv-streams-1">Teofimo Lopez vs. Shakur Stevenson</a></td>
+<td>January 31, 2026 15:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="January 31, 2026 15:00:00"></span></td>
 </tr>
 <tr>
 </tbody>
