--- a/motorsports.html
+++ b/motorsports.html
@@ -97,19 +97,14 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/supercross">AMA Supercross Anaheim II (Qualifying)</a></td>
-<td>January 24, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 13:00:00" data-start="January 24, 2026 10:00:00"></span>
+<td><a href="https://roxiestreams.live/supercross">AMA Supercross Houston (Qualifying)</a></td>
+<td>January 31, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 13:00:00" data-start="January 31, 2026 10:00:00"></span>
 </td>
 <tr>
-<td><a href="https://roxiestreams.live/imsa">Rolex 24 at DAYTONA (IMSA)</a></td>
-<td>January 24, 2026 10:40 AM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 13:00:00" data-start="January 24, 2026 10:40:00"></span>
-</td>
-<tr>
-<td><a href="https://roxiestreams.live/supercross">AMA Supercross Anaheim II (Race)</a></td>
-<td>January 24, 2026 16:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 13:00:00" data-start="January 24, 2026 16:00:00"></span>
+<td><a href="https://roxiestreams.live/supercross">AMA Supercross Houston  (Race)</a></td>
+<td>January 31, 2026 16:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 13:00:00" data-start="January 31, 2026 16:00:00"></span>
 </td>
 <tr>
 </tbody>
