--- a/soccer.html
+++ b/soccer.html
@@ -98,19 +98,11 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Pumas UNAM vs Santos Laguna</a></td>
-<td>January 30, 2026 19:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="January 31, 2026 07:00:00 PM" data-start="January 30, 2026 07:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Juárez vs Cruz Azul</a></td>
-<td>January 30, 2026 19:06 PM</td>
-<td><span <="" class="countdown-timer" data-end="January 31, 2026 07:06:00 PM" data-start="January 30, 2026 07:06:00 PM" span=""></span></td>
-</tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Sheffield Wednesday vs Wrexham</a></td>
 <td>January 31, 2026 04:30 AM</td>
 <td><span <="" class="countdown-timer" data-end="January 31, 2026 11:30:00 AM" data-start="January 31, 2026 11:30:00 AM" span=""></span></td>
-</tbody></tr>
+</tbody>
+</tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Stoke City vs Southampton</a></td>
 <td>January 31, 2026 04:30 AM</td>
