--- a/fighting.html
+++ b/fighting.html
@@ -103,6 +103,11 @@
 <td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="January 31, 2026 09:00:00"></span></td>
 </tr>
 <tr>
+<td><a href="https://roxiestreams.live/ppv-streams-2">BANKS vs SCULL</a></td>
+<td>January 31, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="January 31, 2026 10:00:00"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.live/ufc">UFC 325 Volkanovski vs Lopes 2</a></td>
 <td>January 31, 2026 14:00 PM</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="January 31, 2026 14:00:00"></span></td>
