--- a/index.html
+++ b/index.html
@@ -182,34 +182,44 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/tennis-1">Australian Open</a></td>
-<td>January 30, 2026 12:00 AM</td>
-<td><span class="countdown-timer" data-end="January 31, 2026 12:00:00 AM" data-start="January 30, 2026 12:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Laliga</a></td>
+<td>January 31, 2026 07:00 AM</td>
+<td><span class="countdown-timer" data-end="February 01, 2026 07:00:00 AM" data-start="January 31, 2026 07:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
-<td>January 30, 2026 09:00 AM</td>
-<td><span class="countdown-timer" data-end="January 31, 2026 09:00:00 AM" data-start="January 30, 2026 09:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
+<td>January 31, 2026 07:00 AM</td>
+<td><span class="countdown-timer" data-end="February 01, 2026 07:00:00 AM" data-start="January 31, 2026 07:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/darts">World Masters</a></td>
-<td>January 30, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="January 31, 2026 11:00:00 AM" data-start="January 30, 2026 11:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE Royal Rumble</a></td>
+<td>January 31, 2026 09:00 AM</td>
+<td><span class="countdown-timer" data-end="February 01, 2026 09:00:00 AM" data-start="January 31, 2026 09:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Laliga</a></td>
-<td>January 30, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 31, 2026 12:00:00 PM" data-start="January 30, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/ppv-streams-2">BANKS vs SCULL</a></td>
+<td>January 31, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="February 01, 2026 10:00:00 AM" data-start="January 31, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 30, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="January 31, 2026 04:00:00 PM" data-start="January 30, 2026 04:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/supercross">AMA Supercross Houston</a></td>
+<td>January 31, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="February 01, 2026 10:00:00 AM" data-start="January 31, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/tennis-1">Australian Open</a></td>
-<td>January 30, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 31, 2026 07:00:00 PM" data-start="January 30, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/ufc">UFC 325: VOLKANOVSKI vs LOPES 2</a></td>
+<td>January 31, 2026 2:00 PM</td>
+<td><span class="countdown-timer" data-end="February 01, 2026 02:00:00 PM" data-start="January 31, 2026 02:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/ppv-streams-1">LOPEZ vs STEVENSON</a></td>
+<td>January 31, 2026 3:00 PM</td>
+<td><span class="countdown-timer" data-end="February 01, 2026 03:00:00 PM" data-start="January 31, 2026 03:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/tennis-1">Australian Open (DJOKOVIC vs ALCARAZ)</a></td>
+<td>January 31, 2026 12:00 AM</td>
+<td><span class="countdown-timer" data-end="February 01, 2026 12:00:00 AM" data-start="January 31, 2026 12:00:00 AM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
