--- a/ufc.html
+++ b/ufc.html
@@ -102,8 +102,8 @@
             <div id="playerContainer"></div>
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ataide.m3u8', '601'))">Stream 1</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('hub.m3u8', '601'))">Stream 2 (HUB Sports)</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tnt.m3u8', '601'))">Stream 3 (TNT)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tnt.m3u8', 'daffodil'))">Stream 2 (TNT)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('hub.m3u8', 'daffodil'))">Stream 3 (HUB Sports)</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('para.m3u8', '601'))">Stream 4 (Paramount+)</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('mainevent.m3u8', '601'))">Stream 5 (MAIN EVENT)</button>
 	</div>
