--- a/ufc.html
+++ b/ufc.html
@@ -101,8 +101,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
 	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ataide.m3u8', '601'))">Stream 1</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tennis.m3u8', 'daffodil'))">Stream 2 (TNT)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tennis.m3u8', 'daffodil'))">Stream 1</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ataide.m3u8', '601'))">Stream 2 (TNT)</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('hub.m3u8', 'daffodil'))">Stream 3 (HUB Sports)</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('para.m3u8', '601'))">Stream 4 (Paramount+)</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('mainevent.m3u8', '601'))">Stream 5 (MAIN EVENT)</button>
@@ -123,7 +123,7 @@
 <script>
 var clapprPlayer;
 var domains = [];
-var subdomain = '601';  // Edit this per HTML file
+var subdomain = 'daffodil';  // Edit this per HTML file
 
 // Load domains from txt file
 fetch('domains.txt')
@@ -131,13 +131,13 @@ fetch('domains.txt')
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
     // Auto-load initial stream after domains load
-    setTimeout(() => showPlayer('clappr', getRandomStream('ataide.m3u8')), 500);
+    setTimeout(() => showPlayer('clappr', getRandomStream('tennis.m3u8')), 500);
   })
   .catch(() => {
     console.error('Failed to load domains.txt');
   });
 
-function getRandomStream(streamPath, subdomain = '601') {
+function getRandomStream(streamPath, subdomain = 'daffodil') {
   if (domains.length === 0) {
     return `https://${subdomain}.shadow-ran.online/${streamPath}`; // Fallback
   }
