--- a/ufc.html
+++ b/ufc.html
@@ -101,11 +101,9 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
 	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tennis.m3u8', 'daffodil'))">Stream 1</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ataide.m3u8', '601'))">Stream 2 (TNT)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tennis.m3u8', 'daffodil'))">Stream 1 (TNT)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ataide.m3u8', '601'))">Stream 2 (PARA)</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('hub.m3u8', 'daffodil'))">Stream 3 (HUB Sports)</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('para.m3u8', '601'))">Stream 4 (Paramount+)</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('mainevent.m3u8', '601'))">Stream 5 (MAIN EVENT)</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
