--- a/ufc.html
+++ b/ufc.html
@@ -104,6 +104,7 @@
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tennis.m3u8', 'daffodil'))">Stream 1 (TNT)</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ataide.m3u8', '601'))">Stream 2 (PARA)</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('hub.m3u8', 'daffodil'))">Stream 3 (HUB Sports)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('sn.m3u8', '601'))">Stream 4 (SPORTSNET+)</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
