--- a/soccer.html
+++ b/soccer.html
@@ -98,87 +98,112 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Paris vs Marseille</a></td>
-<td>January 31, 2026 08:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 08:00:00 AM" data-start="January 31, 2026 08:00:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Torino vs Lecce</a></td>
+<td>February 1, 2026 03:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 03:30:00 AM" data-start="February 01, 2026 03:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Napoli vs Fiorentina</a></td>
-<td>January 31, 2026 09:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 09:00:00 AM" data-start="January 31, 2026 09:00:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Real Madrid vs Rayo Vallecano</a></td>
+<td>February 1, 2026 05:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 05:00:00 AM" data-start="February 01, 2026 05:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-10">Chelsea vs West Ham</a></td>
-<td>January 31, 2026 09:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 09:30:00 AM" data-start="January 31, 2026 09:30:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Aston Villa vs Brentford</a></td>
+<td>February 1, 2026 06:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 06:00:00 AM" data-start="February 01, 2026 06:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Hamburger SV vs Bayern Munchen</a></td>
-<td>January 31, 2026 09:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 09:30:00 AM" data-start="January 31, 2026 09:30:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Manchester United vs Fulham</a></td>
+<td>February 1, 2026 06:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 06:00:00 AM" data-start="February 01, 2026 06:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Levante vs Atlético Madrid</a></td>
-<td>January 31, 2026 09:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 09:30:00 AM" data-start="January 31, 2026 09:30:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Nottingham Forest vs Crystal Palace</a></td>
+<td>February 1, 2026 06:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 06:00:00 AM" data-start="February 01, 2026 06:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Lorient vs Nantes</a></td>
-<td>January 31, 2026 10:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 10:00:00 AM" data-start="January 31, 2026 10:00:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Hibernian vs Rangers</a></td>
+<td>February 1, 2026 06:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 06:00:00 AM" data-start="February 01, 2026 06:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Cagliari vs Verona</a></td>
-<td>January 31, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 11:45:00 AM" data-start="January 31, 2026 11:45:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Lyon vs Lille</a></td>
+<td>February 1, 2026 06:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 06:00:00 AM" data-start="February 01, 2026 06:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Elche vs Barcelona</a></td>
-<td>January 31, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 12:00:00 PM" data-start="January 31, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Stuttgart vs Freiburg</a></td>
+<td>February 1, 2026 06:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 06:30:00 AM" data-start="February 01, 2026 06:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-11">Liverpool vs Newcastle</a></td>
-<td>January 31, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 12:00:00 PM" data-start="January 31, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Real Betis vs Valencia</a></td>
+<td>February 1, 2026 07:15 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 07:15:00 AM" data-start="February 01, 2026 07:15:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-12">Dundee United vs Hearts</a></td>
-<td>January 31, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 12:00:00 PM" data-start="January 31, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Nice vs Brest</a></td>
+<td>February 1, 2026 08:15 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 08:15:00 AM" data-start="February 01, 2026 08:15:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Monaco vs Rennes</a></td>
-<td>January 31, 2026 12:05 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 12:05:00 PM" data-start="January 31, 2026 12:05:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Tottenham Hotspur vs Manchester City</a></td>
+<td>February 1, 2026 08:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 08:30:00 AM" data-start="February 01, 2026 08:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-13">América vs Necaxa</a></td>
-<td>January 31, 2026 2:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 02:00:00 PM" data-start="January 31, 2026 02:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Dortmund vs Heidenheim</a></td>
+<td>February 1, 2026 08:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 08:30:00 AM" data-start="February 01, 2026 08:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-14">Atlas vs Mazatlán</a></td>
-<td>January 31, 2026 3:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 03:00:00 PM" data-start="January 31, 2026 03:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-10">Cremonese vs Inter Milan</a></td>
+<td>February 1, 2026 09:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 09:00:00 AM" data-start="February 01, 2026 09:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-15">Atlético San Luis vs Chivas</a></td>
-<td>January 31, 2026 3:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 03:00:00 PM" data-start="January 31, 2026 03:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-11">Galatasaray vs Kayserispor</a></td>
+<td>February 1, 2026 09:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 09:00:00 AM" data-start="February 01, 2026 09:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-16">Monterrey vs Tijuana</a></td>
-<td>January 31, 2026 5:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 05:00:00 PM" data-start="January 31, 2026 05:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Getafe vs Celta Vigo</a></td>
+<td>February 1, 2026 09:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 09:30:00 AM" data-start="February 01, 2026 09:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-17">León vs Tigres UANL</a></td>
-<td>January 31, 2026 5:10 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 01, 2026 05:10:00 PM" data-start="January 31, 2026 05:10:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-12">Flamengo vs Corinthians</a></td>
+<td>February 1, 2026 11:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 11:00:00 AM" data-start="February 01, 2026 11:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-</tr></tbody></table></div>
+<td><a href="https://roxiestreams.info/soccer-streams-13">Para vs Juventus</a></td>
+<td>February 1, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 11:45:00 AM" data-start="February 01, 2026 11:45:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Strasbourg vs PSG</a></td>
+<td>February 1, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 11:45:00 AM" data-start="February 01, 2026 11:45:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Athletic Club vs Real Sociedad</a></td>
+<td>February 1, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 12:00:00 PM" data-start="February 01, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-14">Boca Juniors vs Newell's Old Boys</a></td>
+<td>February 1, 2026 2:15 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 02:15:00 PM" data-start="February 01, 2026 02:15:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-14">Querétaro vs Pachuca</a></td>
+<td>February 1, 2026 3:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 02, 2026 03:00:00 PM" data-start="February 01, 2026 03:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+</tr></tbody></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
