--- a/nhl.html
+++ b/nhl.html
@@ -164,6 +164,24 @@
             <td><a href="https://roxiestreams.info/nhl-streams-14">Seattle Kraken vs Vegas Golden Knights</a></td>
             <td>January 31, 2026 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-02-01 19:00:00" data-start="2026-01-31 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Sunday, February 01, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Los Angeles Kings vs Carolina Hurricanes</a></td>
+            <td>February 01, 2026 12:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-02 12:00:00" data-start="2026-02-01 12:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Boston Bruins vs Tampa Bay Lightning</a></td>
+            <td>February 01, 2026 03:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-02 15:30:00" data-start="2026-02-01 15:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Vegas Golden Knights vs Anaheim Ducks</a></td>
+            <td>February 01, 2026 06:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-02 18:30:00" data-start="2026-02-01 18:30:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
