--- a/fighting.html
+++ b/fighting.html
@@ -98,26 +98,10 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE Royal Rumble</a></td>
-<td>January 31, 2026 09:00 AM</td>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE RAW</a></td>
+<td>February 1, 2026 17:00 PM</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="January 31, 2026 09:00:00"></span></td>
 </tr>
-<tr>
-<td><a href="https://roxiestreams.info/ppv-streams-2">BANKS vs SCULL</a></td>
-<td>January 31, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="January 31, 2026 11:00:00"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/ufc">UFC 325 Volkanovski vs Lopes 2</a></td>
-<td>January 31, 2026 14:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="January 31, 2026 14:00:00"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/ppv-streams-1">Teofimo Lopez vs. Shakur Stevenson</a></td>
-<td>January 31, 2026 15:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="January 31, 2026 15:00:00"></span></td>
-</tr>
-<tr>
 </tbody>
 </table>
 </div>
