--- a/index.html
+++ b/index.html
@@ -182,44 +182,19 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Laliga</a></td>
-<td>January 31, 2026 07:01 AM</td>
-<td><span class="countdown-timer" data-end="February 01, 2026 07:00:00 AM" data-start="January 31, 2026 07:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Laliga</a></td>
+<td>February 1, 2026 05:00 AM</td>
+<td><span class="countdown-timer" data-end="February 02, 2026 05:00:00 AM" data-start="February 01, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer">Premier League</a></td>
-<td>January 31, 2026 07:00 AM</td>
-<td><span class="countdown-timer" data-end="February 01, 2026 07:00:00 AM" data-start="January 31, 2026 07:00:00 AM"></span></td>
+<td>February 1, 2026 06:00 AM</td>
+<td><span class="countdown-timer" data-end="February 02, 2026 06:00:00 AM" data-start="February 01, 2026 06:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE Royal Rumble</a></td>
-<td>January 31, 2026 09:00 AM</td>
-<td><span class="countdown-timer" data-end="February 01, 2026 09:00:00 AM" data-start="January 31, 2026 09:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/ppv-streams-2">BANKS vs SCULL</a></td>
-<td>January 31, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="February 01, 2026 10:00:00 AM" data-start="January 31, 2026 10:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/supercross">AMA Supercross Houston</a></td>
-<td>January 31, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="February 01, 2026 10:00:00 AM" data-start="January 31, 2026 10:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/ufc">UFC 325: VOLKANOVSKI vs LOPES 2</a></td>
-<td>January 31, 2026 2:00 PM</td>
-<td><span class="countdown-timer" data-end="February 01, 2026 02:00:00 PM" data-start="January 31, 2026 02:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/ppv-streams-1">LOPEZ vs STEVENSON</a></td>
-<td>January 31, 2026 3:00 PM</td>
-<td><span class="countdown-timer" data-end="February 01, 2026 03:00:00 PM" data-start="January 31, 2026 03:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/tennis-1">Australian Open (DJOKOVIC vs ALCARAZ)</a></td>
-<td>February 1, 2026 12:00 AM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 AM" data-start="February 01, 2026 12:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.info/nba">NBA</a></td>
+<td>February 1, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 02, 2026 12:00:00 PM" data-start="February 01, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
