--- a/nba.html
+++ b/nba.html
@@ -142,7 +142,7 @@
      <tbody>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nba-streams-1">
+        <a href="https://roxiestreams.info/nba-streams-1">
          Milwaukee Bucks vs Boston Celtics
         </a>
        </td>
@@ -156,7 +156,7 @@
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nba-streams-2">
+        <a href="https://roxiestreams.info/nba-streams-2">
          Orlando Magic vs San Antonio Spurs
         </a>
        </td>
@@ -170,7 +170,7 @@
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nba-streams-3">
+        <a href="https://roxiestreams.info/nba-streams-3">
          Brooklyn Nets vs Detroit Pistons
         </a>
        </td>
@@ -184,7 +184,7 @@
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nba-streams-4">
+        <a href="https://roxiestreams.info/nba-streams-4">
          Chicago Bulls vs Miami Heat
         </a>
        </td>
@@ -198,7 +198,7 @@
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nba-streams-5">
+        <a href="https://roxiestreams.info/nba-streams-5">
          Utah Jazz vs Toronto Raptors
         </a>
        </td>
@@ -212,7 +212,7 @@
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nba-streams-6">
+        <a href="https://roxiestreams.info/nba-streams-6">
          Sacramento Kings vs Washington Wizards
         </a>
        </td>
@@ -226,7 +226,7 @@
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nba-streams-7">
+        <a href="https://roxiestreams.info/nba-streams-7">
          Los Angeles Lakers vs New York Knicks
         </a>
        </td>
@@ -240,7 +240,7 @@
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nba-streams-8">
+        <a href="https://roxiestreams.info/nba-streams-8">
          Los Angeles Clippers vs Phoenix Suns
         </a>
        </td>
@@ -254,7 +254,7 @@
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nba-streams-9">
+        <a href="https://roxiestreams.info/nba-streams-9">
          Cleveland Cavaliers vs Portland Trail Blazers
         </a>
        </td>
@@ -268,7 +268,7 @@
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nba-streams-10">
+        <a href="https://roxiestreams.info/nba-streams-10">
          Oklahoma City Thunder vs Denver Nuggets
         </a>
        </td>
