--- a/nba-streams-1.html
+++ b/nba-streams-1.html
@@ -137,7 +137,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/nba.m3u8');
+            showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nba.m3u8');
         };
     </script>
     <script>
