--- a/nhl.html
+++ b/nhl.html
@@ -96,17 +96,17 @@
 </thead>
 <tbody>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-1">Los Angeles Kings vs Carolina Hurricanes</a></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-1">Los Angeles Kings vs Carolina Hurricanes</a></td>
             <td>February 01, 2026 12:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-02-02 12:00:00" data-start="2026-02-01 12:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-2">Boston Bruins vs Tampa Bay Lightning</a></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-2">Boston Bruins vs Tampa Bay Lightning</a></td>
             <td>February 01, 2026 03:30 PM</td>
             <td><span class="countdown-timer" data-end="2026-02-02 15:30:00" data-start="2026-02-01 15:30:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-3">Vegas Golden Knights vs Anaheim Ducks</a></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-3">Vegas Golden Knights vs Anaheim Ducks</a></td>
             <td>February 01, 2026 06:30 PM</td>
             <td><span class="countdown-timer" data-end="2026-02-02 18:30:00" data-start="2026-02-01 18:30:00"></span></td>
         </tr></tbody></table>
