--- a/nba-streams-2.html
+++ b/nba-streams-2.html
@@ -136,7 +136,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nba2.m3u8');
+            showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/nba2.m3u8');
         };
     </script>
     <script>
