--- a/ppv-streams-1.html
+++ b/ppv-streams-1.html
@@ -101,8 +101,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
 	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('cbs.m3u8', '601'))">E!</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ppv.m3u8', '601'))">CBS</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('cbs.m3u8', '601'))">CBS</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ppv.m3u8', '601'))">E!</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
