--- a/ppv-streams-1.html
+++ b/ppv-streams-1.html
@@ -102,7 +102,7 @@
             <div id="playerContainer"></div>
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('cbs.m3u8', '601'))">CBS</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ppv.m3u8', '601'))">RAW</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ppv.m3u8', '601'))">Cosmote</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
