--- a/index.html
+++ b/index.html
@@ -182,24 +182,24 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Laliga</a></td>
-<td>February 1, 2026 05:00 AM</td>
-<td><span class="countdown-timer" data-end="February 02, 2026 05:00:00 AM" data-start="February 01, 2026 05:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Premier League</a></td>
+<td>February 2, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 03, 2026 12:00:00 PM" data-start="February 02, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer">Premier League</a></td>
-<td>February 1, 2026 06:00 AM</td>
-<td><span class="countdown-timer" data-end="February 02, 2026 06:00:00 AM" data-start="February 01, 2026 06:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Laliga</a></td>
+<td>February 2, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 03, 2026 12:00:00 PM" data-start="February 02, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nba">NBA</a></td>
-<td>February 1, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="February 02, 2026 12:00:00 PM" data-start="February 01, 2026 12:00:00 PM"></span></td>
+<td>February 2, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="February 03, 2026 04:00:00 PM" data-start="February 02, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/ppv-streams-1">68th Annual Grammy Awards</a></td>
-<td>February 1, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="February 02, 2026 12:00:00 PM" data-start="February 01, 2026 17:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE RAW</a></td>
+<td>February 2, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 03, 2026 05:00:00 PM" data-start="February 02, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
