--- a/nba.html
+++ b/nba.html
@@ -282,6 +282,82 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for February 02, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-1">
+         New Orleans Pelicans vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        February 02, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 03, 2026 4:00 PM:00" data-start="February 02, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-2">
+         Houston Rockets vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        February 02, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 03, 2026 4:00 PM:00" data-start="February 02, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-3">
+         Minnesota Timberwolves vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        February 02, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 03, 2026 4:30 PM:00" data-start="February 02, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-4">
+         Philadelphia 76ers vs Los Angeles Clippers
+        </a>
+       </td>
+       <td>
+        February 02, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 03, 2026 7:00 PM:00" data-start="February 02, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
