--- a/nhl.html
+++ b/nhl.html
@@ -109,6 +109,59 @@
             <td><a href="https://roxiestreams.info/nhl-streams-3">Vegas Golden Knights vs Anaheim Ducks</a></td>
             <td>February 01, 2026 06:30 PM</td>
             <td><span class="countdown-timer" data-end="2026-02-02 18:30:00" data-start="2026-02-01 18:30:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Monday, February 02, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-1">Buffalo Sabres vs Florida Panthers</a></td>
+            <td>February 02, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-03 16:00:00" data-start="2026-02-02 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-2">Ottawa Senators vs Pittsburgh Penguins</a></td>
+            <td>February 02, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-03 16:00:00" data-start="2026-02-02 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-3">New York Islanders vs Washington Capitals</a></td>
+            <td>February 02, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-03 16:00:00" data-start="2026-02-02 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-4">Montreal Canadiens vs Minnesota Wild</a></td>
+            <td>February 02, 2026 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-03 16:30:00" data-start="2026-02-02 16:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-5">St. Louis Blues vs Nashville Predators</a></td>
+            <td>February 02, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-03 17:00:00" data-start="2026-02-02 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-6">San Jose Sharks vs Chicago Blackhawks</a></td>
+            <td>February 02, 2026 05:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-03 17:30:00" data-start="2026-02-02 17:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-7">Winnipeg Jets vs Dallas Stars</a></td>
+            <td>February 02, 2026 05:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-03 17:30:00" data-start="2026-02-02 17:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-8">Detroit Red Wings vs Colorado Avalanche</a></td>
+            <td>February 02, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-03 18:00:00" data-start="2026-02-02 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-9">Vancouver Canucks vs Utah Mammoth</a></td>
+            <td>February 02, 2026 06:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-03 18:30:00" data-start="2026-02-02 18:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-10">Toronto Maple Leafs vs Calgary Flames</a></td>
+            <td>February 02, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-03 19:00:00" data-start="2026-02-02 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
