--- a/soccer.html
+++ b/soccer.html
@@ -100,20 +100,20 @@
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-1">Udinese vs Roma</a></td>
 <td>February 2, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 02, 2026 03:30:00 AM" data-start="February 01, 2026 03:30:00 AM" span=""></span></td>
+<td><span <="" class="countdown-timer" data-end="February 03, 2026 11:45:00 AM" data-start="February 02, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-2">Sunderland vs Burnley</a></td>
 <td>February 2, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 02, 2026 05:00:00 AM" data-start="February 01, 2026 05:00:00 AM" span=""></span></td>
+<td><span <="" class="countdown-timer" data-end="February 03, 2026 12:00:00 PM" data-start="February 02, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-3">Mallorca vs Sevilla</a></td>
 <td>February 2, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 02, 2026 06:00:00 AM" data-start="February 01, 2026 06:00:00 AM" span=""></span></td>
+<td><span <="" class="countdown-timer" data-end="February 03, 2026 12:00:00 PM" data-start="February 02, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-</tbody></tr></tbody></table></div>
+</tr></tbody></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
