--- a/soccer.html
+++ b/soccer.html
@@ -98,19 +98,59 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Udinese vs Roma</a></td>
-<td>February 2, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 03, 2026 11:45:00 AM" data-start="February 02, 2026 11:45:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Bologna vs Milan</a></td>
+<td>February 3, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 11:45:00 AM" data-start="February 03, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Sunderland vs Burnley</a></td>
-<td>February 2, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 03, 2026 12:00:00 PM" data-start="February 02, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Sheffield United vs Oxford United</a></td>
+<td>February 3, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 11:45:00 AM" data-start="February 03, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Mallorca vs Sevilla</a></td>
-<td>February 2, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 03, 2026 12:00:00 PM" data-start="February 02, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Portsmouth vs Ipswich Town</a></td>
+<td>February 3, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 11:45:00 AM" data-start="February 03, 2026 11:45:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Albacete vs Barcelona</a></td>
+<td>February 3, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 12:00:00 PM" data-start="February 03, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Arsenal vs Chelsea</a></td>
+<td>February 3, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 12:00:00 PM" data-start="February 03, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-6">St. Mirren vs Hearts</a></td>
+<td>February 3, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 12:00:00 PM" data-start="February 03, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Marseille vs Rennes</a></td>
+<td>February 3, 2026 12:10 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 12:10:00 PM" data-start="February 03, 2026 12:10:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Forge vs Tigres UANL</a></td>
+<td>February 3, 2026 16:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 04:00:00 PM" data-start="February 03, 2026 04:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-9">The Strongest vs Deportivo Tachira</a></td>
+<td>February 3, 2026 16:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 04:30:00 PM" data-start="February 03, 2026 04:30:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Olimpia vs América</a></td>
+<td>February 3, 2026 18:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 06:00:00 PM" data-start="February 03, 2026 06:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">San Diego vs Pumas UNAM</a></td>
+<td>February 3, 2026 20:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 08:00:00 PM" data-start="February 03, 2026 08:00:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
