--- a/index.html
+++ b/index.html
@@ -182,23 +182,28 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Premier League</a></td>
-<td>February 2, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Carabao Cup</a></td>
+<td>February 3, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="February 03, 2026 12:00:00 PM" data-start="February 02, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Laliga</a></td>
-<td>February 2, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Copa del Rey</a></td>
+<td>February 3, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="February 03, 2026 12:00:00 PM" data-start="February 02, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nba">NBA</a></td>
-<td>February 2, 2026 4:00 PM</td>
+<td>February 3, 2026 4:00 PM</td>
 <td><span class="countdown-timer" data-end="February 03, 2026 04:00:00 PM" data-start="February 02, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE RAW</a></td>
-<td>February 2, 2026 5:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-8">CONCACAF</a></td>
+<td>February 3, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="February 03, 2026 05:00:00 PM" data-start="February 02, 2026 05:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE NXT</a></td>
+<td>February 3, 2026 5:00 PM</td>
 <td><span class="countdown-timer" data-end="February 03, 2026 05:00:00 PM" data-start="February 02, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
